--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ h1 {
 
 .game-instructions {
   max-width: 80%;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   text-align: center;
   color: white;
 }
 
 .start-button {
   width: 100%;
-  margin-top: 200px;
+  margin-top: 130px;
 
   background: transparent;
   border: none;
